app/k8s-deployment.yaml
# Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-twitter-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mini-twitter-backend
  template:
    metadata:
      labels:
        app: mini-twitter-backend
    spec:
      containers:
        - name: backend
          image: mini-twitter-backend:v4
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
# Backend Service
apiVersion: v1
kind: Service
metadata:
  name: mini-twitter-backend
spec:
  type: ClusterIP
  selector:
    app: mini-twitter-backend
  ports:
    - port: 8000
      targetPort: 8000

---
# Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-twitter-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mini-twitter-frontend
  template:
    metadata:
      labels:
        app: mini-twitter-frontend
    spec:
      containers:
        - name: frontend
          image: mini-twitter-frontend:v4
          imagePullPolicy: Never
          ports:
            - containerPort: 80

---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: mini-twitter-frontend
spec:
  type: ClusterIP
  selector:
    app: mini-twitter-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
